--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.11.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tinkerpop</groupId>
+            <artifactId>tinkergraph-gremlin</artifactId>
+            <version>3.5.2</version>
+        </dependency>
     </dependencies>
 
     <build>
