--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
@@ -36,6 +41,36 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.11.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tinkerpop</groupId>
+            <artifactId>gremlin-driver</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tinkerpop</groupId>
+            <artifactId>gremlin-server</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.janusgraph</groupId>
+            <artifactId>janusgraph-core</artifactId>
+            <version>0.6.1</version>
+        </dependency>
+        <dependency>
+            <artifactId>janusgraph-cql</artifactId>
+            <groupId>org.janusgraph</groupId>
+            <version>0.6.1</version>
+        </dependency>
+        <dependency>
+            <artifactId>janusgraph-driver</artifactId>
+            <groupId>org.janusgraph</groupId>
+            <version>0.6.1</version>
+        </dependency>
+        <dependency>
+            <artifactId>janusgraph-es</artifactId>
+            <groupId>org.janusgraph</groupId>
+            <version>0.6.1</version>
         </dependency>
     </dependencies>
 
