Level 2 Code Commit(JanusGraph In Memory)

--- a/conf/remote-graph.properties
+++ b/conf/remote-graph.properties
@@ -12,8 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-hosts: [localhost]
-port: 8182
-serializer: {
-    className: org.apache.tinkerpop.gremlin.driver.ser.GryoMessageSerializerV1d0,
-    config: { ioRegistries: [org.janusgraph.graphdb.tinkerpop.JanusGraphIoRegistry] }}
+gremlin.remote.remoteConnectionClass=org.apache.tinkerpop.gremlin.driver.remote.DriverRemoteConnection
+gremlin.remote.driver.clusterFile=conf/remote-objects.yaml
+gremlin.remote.driver.sourceName=g
