--- a/conf/jgex-inmemory.properties
+++ b/conf/jgex-inmemory.properties
@@ -12,8 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-gremlin.remote.remoteConnectionClass=org.apache.tinkerpop.gremlin.driver.remote.DriverRemoteConnection
-# cluster file has the remote server configuration
-gremlin.remote.driver.clusterFile=example-remotegraph/conf/remote-objects.yaml
-# source name is the global graph traversal source defined on the server
-gremlin.remote.driver.sourceName=g
+gremlin.graph=org.janusgraph.core.JanusGraphFactory
+storage.backend=inmemory
